--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 										visualizations, statistical significance tests, and regression analyses. Final product
 										can be viewed on Github in flightdelaysproject.docx.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://github.com/gnileux/flightdelays" target="_blank" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
